--- a/Notebook/#1.ipynb
+++ b/Notebook/#1.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Emotion</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1901</th>\n      <td>and worship your lord until what is certain de...</td>\n    </tr>\n    <tr>\n      <th>1902</th>\n      <td>the decree of god is at hand  so do not seek t...</td>\n    </tr>\n    <tr>\n      <th>1903</th>\n      <td>he sends down the angels with revelations by h...</td>\n    </tr>\n    <tr>\n      <th>1904</th>\n      <td>he created the heavens and the earth for a tru...</td>\n    </tr>\n    <tr>\n      <th>1905</th>\n      <td>he created man out of a mere drop of sperm  ye...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1995</th>\n      <td>do not use your oaths to deceive each other le...</td>\n    </tr>\n    <tr>\n      <th>1996</th>\n      <td>do not sell god s covenant for a paltry price ...</td>\n    </tr>\n    <tr>\n      <th>1997</th>\n      <td>what you have shall pass away  but what is wit...</td>\n    </tr>\n    <tr>\n      <th>1998</th>\n      <td>to whoever does good deeds  man or woman  and ...</td>\n    </tr>\n    <tr>\n      <th>1999</th>\n      <td>when you read the quran  seek god s protection...</td>\n    </tr>\n  </tbody>\n</table>\n<p>99 rows × 1 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 37
     }
    ],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Emotion</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1901</th>\n      <td>and worship your lord until what is certain de...</td>\n    </tr>\n    <tr>\n      <th>1902</th>\n      <td>the decree of god is at hand  so do not seek t...</td>\n    </tr>\n    <tr>\n      <th>1903</th>\n      <td>he sends down the angels with revelations by h...</td>\n    </tr>\n    <tr>\n      <th>1904</th>\n      <td>he created the heavens and the earth for a tru...</td>\n    </tr>\n    <tr>\n      <th>1905</th>\n      <td>he created man out of a mere drop of sperm  ye...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 38
     }
    ],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 40
     }
    ],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 42
     }
    ],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 46
     }
    ],
    "source": [
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1265,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def adjective(text):\n",
+    "    tokens = word_tokenize(text)\n",
+    "    tokens_pos = pos_tag(tokens, tagset='universal')\n",
+    "    adj = []\n",
+    "    for i in tokens_pos:\n",
+    "        if i[1] in ('ADJ'):\n",
+    "            if i[1] == 'ADJ': adj.append(lemmatizer.lemmatize(i[1], pos='a'));\n",
+    "    return adj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2276,11 +2292,29 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 63
     }
    ],
    "source": [
     "tokenize(sent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "worship,lord,be,certain,death,come,decree,god,be,hand,do,seek,hasten,be,exalt,associate,send,angel,revelation,command,whoever,servant,please,say,warn,mankind,be,god,save,fear,create,heaven,earth,true,purpose,be,exalt,anything,associate,create,man,mere,drop,sperm,show,be,contentious,have,create,cattle,derive,food,clothing,numerous,other,benefit,pleasant,look,bring,home,evening,take,pasture,morning,carry,load,place,could,otherwise,reach,great,hardship,lord,be,compassionate,merciful,have,create,horse,mule,donkey,may,ride,may,be,put,show,create,other,thing,knowledge,straight,way,lead,god,be,way,deviate,right,course,wish,would,guide,be,send,water,sky,drink,tree,grow,pasture,cattle,grow,corn,olive,date,palm,grape,kind,fruit,be,sign,people,reflect,have,make,night,day,sun,moon,subservient,star,be,subservient,command,be,sign,men,understand,earth,have,fashion,object,various,hue,be,sign,people,pay,heed,be,subject,sea,may,eat,fresh,seafood,bring,forth,ornament,wear,see,ship,cleave,may,seek,bounty,feel,grateful,have,set,earth,firm,mountains,l,shake,river,track,may,find,way,have,set,other,landmark,star,people,set,course,be,create,do,create,will,take,heed,try,count,god,s,blessing,would,be,able,number,god,be,forgiving,most,merciful,god,know,conceal,reveal,call,god,can,create,anything,be,create,be,dead,live,do,know,will,be,raise,life,god,be,one,god,do,believe,hereafter,heart,refuse,admit,truth,be,arrogant,god,know,conceal,reveal,do,love,arrogant,be,ask,be,lord,have,send,say,story,ancient,let,bear,own,burden,resurrection,day,burden,lead,knowledge,evil,load,shall,be,burden,go,plot,god,struck,foundation,building,roof,fell,punishment,come,do,expect,day,resurrection,will,disgrace,say,be,partner,sake,oppose,guidance,give,knowledge,will,say,day,humiliation,affliction,will,befall,have,be,deny,truth,live,angel,take,be,wrong,own,soul,will,offer,submission,say,be,do,anything,evil,angel,will,reply,god,be,aware,have,be,do,gate,hell,shall,abide,evil,be,abode,arrogant,fear,god,be,ask,have,lord,send,reply,be,goodness,reward,do,good,work,world,be,good,abode,hereafter,be,home,righteous,be,excellent,will,enter,garden,eternity,river,will,flow,foot,will,have,wish,god,reward,righteous,live,angel,take,state,purity,say,peace,be,enter,garden,good,do,world,be,wait,angel,come,fulfillment,lord,s,will,go,do,same,god,do,wrong,wrong,evil,result,deed,overtake,use,mock,encompassed,associate,others,god,say,god,have,will,would,have,worship,anything,father,would,have,forbid,anything,sanction,do,go,duty,messenger,be,convey,message,raise,people,messenger,enjoin,worship,god,shun,evil,be,god,guide,be,others,become,deserve,ruin,travel,earth,observe,be,end,reject,messenger,prophet,may,be,eager,guide,god,do,guide,let,go,astray,refusal,give,positive,response,truth,will,have,supporter,swear,strong,oath,god,god,will,raise,dead,life,nonetheless,be,promise,bind,most,people,do,realize,be,may,make,clear,have,differ,be,bent,deny,truth,may,realize,be,lie,will,something,happen,say,be,be,be,persecution,migrate,home,cause,god,will,provide,goodly,abode,life,reward,hereafter,will,be,great,know,be,one,be,steadfast,put,trust,lord,messenger,send,be,mortal,men,vouchsafe,revelation,ask,people,book,do,know,send,clear,sign,scriptures,have,send,reminder,enable,make,clear,mankind,have,be,send,may,reflect,do,devise,evil,plan,feel,secure,god,will,make,sink,land,punishment,will,come,least,expect,will,seize,daily,activity,will,be,able,frustrate,will,punish,give,fright,lord,be,kind,merciful,have,observe,thing,god,have,create,cast,shadow,leave,prostrate,god,humility,everything,heaven,creature,earth,prostrate,god,do,angel,do,behave,fear,lord,do,be,command,god,say,do,take,god,be,god,fear,belong,whatsoever,be,heaven,earth,obedience,be,due,will,fear,anyone,other,god,bless,have,be,god,turn,help,distress,befall,sooner,do,relieve,distress,set,other,partner,lord,show,gratitude,have,give,enjoy,yourselves,will,know,appoint,share,have,provide,false,god,know,nothing,shall,be,question,lie,have,be,fabricate,assign,daughter,god,glory,be,son,desire,have,birth,girl,be,announce,face,darkens,be,fill,gloom,shame,hide,people,bad,news,have,be,give,should,keep,feel,disgrace,bury,dust,ill,judge,attribute,evil,applies,do,believe,hereafter,god,apply,high,attribute,be,wise,god,be,take,people,task,wrongdoing,would,leave,living,creature,earth,give,respite,appointed,time,time,come,can,delay,hour,can,bring,attribute,god,dislike,tongue,utter,lie,good,thing,be,doubt,fire,await,shall,be,hasten,god,have,send,messenger,other,nation,satan,make,foul,deed,seem,fair,today,be,patron,shall,have,painful,punishment,have,send,book,can,make,clear,concern,differ,guidance,mercy,people,believe,god,send,water,sky,revive,earth,be,dead,be,sign,people,listen,be,lesson,cattle,content,belly,dung,blood,give,pure,milk,drink,pleasant,drink,fruit,date,palm,grape,derive,intoxicant,wholesome,food,be,sign,men,understand,lord,inspire,bee,say,make,home,mountain,tree,structure,men,erect,fee,kind,fruit,follow,trodden,path,lord,come,drink,different,colour,provide,healing,mankind,be,sign,people,give,think,create,shall,cause,die,shall,have,life,prolong,abject,old,age,cease,know,anything,have,have,knowledge,god,be,knowing,powerful,god,have,give,more,provision,others,have,be,give,be,unwilling,pass,provision,servant,possess,become,equal,will,deny,favour,god,god,have,give,wive,yourselves,give,child,grandchild,wife,provide,wholesome,thing,will,believe,falsehood,deny,god,s,favour,worship,god,thing,have,control,provision,heaven,earth,way,do,have,power,do,do,compare,god,anyone,god,have,knowledge,have,god,make,comparison,own,slave,possess,power,anything,someone,have,give,plentiful,provision,give,be,equal,praise,be,god,most,people,do,know,god,make,comparison,men,be,dumb,can,do,thing,be,burden,master,wherever,send,errand,bring,good,be,equal,someone,command,justice,be,straight,path,god,have,knowledge,hidden,reality,heaven,earth,come,hour,judgement,be,twinkling,eye,god,have,full,power,everything,god,bring,forth,womb,mother,know,nothing,give,hearing,sight,heart,might,be,grateful,do,see,bird,hold,poise,vault,heaven,nothing,hold,god,be,sign,believe,god,have,make,house,place,rest,make,tent,cattle,hide,be,light,carry,be,travel,be,stay,place,provide,wool,fur,hair,cattle,household,good,article,use,time,god,have,grant,shade,have,create,place,shelter,mountain,garment,protect,yourselves,heat,coat,mail,shield,battle,complete,favour,may,submit,turn,be,responsible,convey,message,recognize,favour,god,deny,most,be,ungrateful,day,raise,witness,people,be,bent,deny,truth,will,be,permit,put,excuse,make,amends,wrongdoer,face,punishment,shall,be,lighten,shall,be,grant,reprieve,associate,partner,god,see,associate,god,will,say,lord,be,associate,god,use,call,will,throw,word,say,be,liar,day,will,offer,total,submission,god,use,devise,will,fail,be,bent,deny,truth,turn,others,path,god,will,heap,punishment,punishment,return,corruption,bring,day,will,come,raise,people,witness,amongst,will,bring,witness,people,have,send,book,make,everything,clear,guidance,mercy,glad,tidings,submit,god,god,command,justice,kindness,give,due,near,relative,forbid,shameful,deed,injustice,transgression,admonish,may,take,heed,fulfill,covenant,god,have,make,do,break,pledge,confirmation,have,make,god,surety,god,know,do,do,woman,unravel,yarn,strand,have,be,spun,use,oath,mean,deceive,community,could,become,big,god,be,test,mean,day,resurrection,will,make,clear,differ,have,god,please,would,have,unite,community,let,go,astray,whoever,will,guide,whoever,will,will,be,call,account,action,do,use,oath,deceive,other,l,foot,should,slip,be,place,l,should,taste,penalty,have,hinder,others,path,god,will,have,terrible,punishment,do,sell,god,s,covenant,paltry,price,be,god,be,know,have,shall,pass,be,god,be,last,will,give,be,patient,reward,accord,best,action,whoever,do,good,deed,man,woman,be,believer,shall,give,good,life,will,bestow,reward,accord,best,work,read,quran,seek,god,s,protection,satan,reject,"
+     ]
+    }
+   ],
+   "source": [
+    "for i in tokenize(sent):\n",
+    "    print(i, end=',')"
    ]
   },
   {
